assets/css/style.css
body {
    background-image: url("/assets/images/bac.jpg");
    background-repeat: repeat;
    background-size: 100%;
  }

  .box {
      height: 400px;
    text-align: center;
    opacity: .90;
    

  }
  #box-2{
      height:200px;

  }
h1 {
    margin:20px !important;
   font-family:serif;
   font-size: 25px;
   color:azure

}
@media screen and (max-width:576px) {
    body{
        background-size: 150%;
        background-repeat: repeat;
        
    }
}
@media screen and (max-width:768px) {
    body{
        background-size:150%;
        background-repeat: repeat;
    }
}
@media screen and (max-width:992px){
    body{
        background-size:150%;
        background-repeat: repeat;
    }
}
@media screen and (max-width:1200px){
    body{
        background-size:150%;
        background-repeat:repeat;

    }
}
@media screen and (max-width:375px){
    body{
        background-size:150%;
    }
}

